# indexbind

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  package-lock.json  package.json  wrangler.jsonc
.github/workflows/: ci.yml  release.yml
crates/indexbind-build/: Cargo.toml
crates/indexbind-build/src/: lib.rs  main.rs
crates/indexbind-core/: Cargo.toml
crates/indexbind-core/src/: artifact.rs  build.rs  build_cache.rs  canonical.rs  chunking.rs  embedding.rs  lexical.rs  lib.rs  retriever.rs
crates/indexbind-node/src/: lib.rs
crates/indexbind-wasm/: Cargo.toml
crates/indexbind-wasm/src/: lib.rs
crates/inkdex-build/: Cargo.toml
crates/inkdex-build/src/: lib.rs  main.rs
crates/inkdex-core/: Cargo.toml
crates/inkdex-core/src/: artifact.rs  embedding.rs  error.rs  lib.rs  retriever.rs
crates/inkdex-node/: Cargo.toml
crates/inkdex-node/src/: lib.rs
docs/: docs-improvement-plan-2026-03.md
docs/architecture/: canonical-artifact-and-wasm.md
docs/site/: README.md  mdorigin.config.json
docs/site/concepts/: runtime-model.md
docs/site/guides/: README.md  adoption-examples.md  benchmarks-and-case-studies.md  choosing-indexbind.md  getting-started.md  search-quality-controls.md  web-and-cloudflare.md
docs/site/reference/: README.md  api.md  cli.md  packaging.md
fixtures/benchmark/: README.md
fixtures/manual/cloudflare-worker-issue-18/: README.md  index.ts  wrangler.jsonc
forks/model2vec-rs/src/: model.rs
scripts/: build-wasm.mjs  copy-native.mjs  prepare-native-package.mjs  prepare-root-package.mjs  release-targets.mjs  smoke-cli.mjs  smoke-cloudflare-worker.mjs  smoke-install.mjs  smoke-web-browser.mjs  smoke-web-bundle.mjs  smoke-web-worker.mjs  verify-release.mjs  verify-root-package.mjs
skills/: README.md
skills/indexbind/: SKILL.md
skills/indexbind/agents/: openai.yaml
src/: build.ts  cli.ts  cloudflare.ts  index.ts  native.ts  repo-conventions.ts  web-core.ts  web.ts
src/wasm/: indexbind_wasm.d.ts
(+4 files in other folders)
