[package]
name = "indexbind-build"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Build helpers for generating indexbind artifacts."

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
yaml-rust2.workspace = true
indexbind-core = { path = "../indexbind-core" }

[dev-dependencies]
tempfile.workspace = true
