[package]
name = "indexbind-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
blake3.workspace = true
model2vec-rs = { path = "../../forks/model2vec-rs", default-features = false, features = ["wasm"] }
serde.workspace = true
serde-wasm-bindgen.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
