[package]
name = "inkdex-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi.workspace = true
napi-derive.workspace = true
serde.workspace = true
serde_json.workspace = true
inkdex-core = { path = "../inkdex-core" }

[build-dependencies]
napi-build.workspace = true
